@@ -1,7 +1,15 @@
 package com.flash_card.view_model.flashcard;
 
+import com.flash_card.model.dao.FlashcardDao;
+import com.flash_card.model.dao.FlashcardSetDao;
+import com.flash_card.model.dao.UserDao;
 import com.flash_card.model.entity.Flashcard;
-import com.flash_card.model.entity.TestSetupAbstract;
+import com.flash_card.model.entity.FlashcardSet;
+import com.flash_card.model.entity.User;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.EntityManagerFactory;
+import jakarta.persistence.Persistence;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -9,12 +17,32 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-public class EditFlashcardViewModelTest extends TestSetupAbstract {
-    private EditFlashcardViewModel editFlashcardViewModel;
+public class EditFlashcardViewModelTest {
+
+    private static final EntityManagerFactory entityManagerFactory = Persistence.createEntityManagerFactory("FlashcardMariaDbUnitTest");
+    private static final EntityManager entityManager = entityManagerFactory.createEntityManager();
+    private final EditFlashcardViewModel editFlashcardViewModel = new EditFlashcardViewModel(entityManager);
+    private final FlashcardDao flashcardDao = FlashcardDao.getInstance(entityManager);
+    private final FlashcardSetDao flashcardSetDao = FlashcardSetDao.getInstance(entityManager);
+    private final UserDao userDao = UserDao.getInstance(entityManager);
+    private final User testUser = new User("25752572", "John", "Doe", "id43432145@example.com", "sample-id-token");
+    private final FlashcardSet testFlashcardSet = new FlashcardSet("Test Set", "Test Description", "Test Topic", testUser);
+    private final Flashcard testFlashcard = new Flashcard("Test term", "Test definition", testFlashcardSet, testUser);
 
     @BeforeEach
-    public void setUp() {
-        editFlashcardViewModel = new EditFlashcardViewModel(entityManager);
+    void setUp() {
+        userDao.persist(testUser);
+        flashcardSetDao.persist(testFlashcardSet);
+        flashcardDao.persist(testFlashcard);
+    }
+
+    @AfterEach
+    void tearDown() {
+        if (flashcardDao.findById(testFlashcard.getCardId()) != null) {
+            flashcardDao.delete(testFlashcard);
+        }
+        flashcardSetDao.delete(testFlashcardSet);
+        userDao.delete(testUser);
     }
 
     @Test
@@ -24,50 +52,50 @@ public class EditFlashcardViewModelTest extends TestSetupAbstract {
 
     @Test
     public void testGetSetName() {
-        String setName = editFlashcardViewModel.getSetName(testFlashcardSet1.getSetId());
-        assertEquals(testFlashcardSet1.getSetName(), setName);
+        String setName = editFlashcardViewModel.getSetName(testFlashcardSet.getSetId());
+        assertEquals(testFlashcardSet.getSetName(), setName);
         assertNull(editFlashcardViewModel.getSetName(0));
     }
 
     @Test
     public void testGetFlashcardIdsBySetId() {
-        List<Integer> flashcardIds = editFlashcardViewModel.getFlashcardIdsBySetId(testFlashcardSet1.getSetId());
+        List<Integer> flashcardIds = editFlashcardViewModel.getFlashcardIdsBySetId(testFlashcardSet.getSetId());
         assertFalse(flashcardIds.isEmpty());
-        assertEquals(testFlashcard1.getCardId(), flashcardIds.getFirst());
+        assertEquals(testFlashcard.getCardId(), flashcardIds.get(0));
     }
 
     @Test
     public void testTerm() {
-        String term = editFlashcardViewModel.term(testFlashcard1.getCardId());
-        assertEquals(testFlashcard1.getTerm(), term);
+        String term = editFlashcardViewModel.term(testFlashcard.getCardId());
+        assertEquals(testFlashcard.getTerm(), term);
     }
 
     @Test
     public void testDefinition() {
-        String definition = editFlashcardViewModel.definition(testFlashcard1.getCardId());
-        assertEquals(testFlashcard1.getDefinition(), definition);
+        String definition = editFlashcardViewModel.definition(testFlashcard.getCardId());
+        assertEquals(testFlashcard.getDefinition(), definition);
     }
 
     @Test
     public void testUpdateFlashcard() {
         String newTerm = "Updated Term";
         String newDefinition = "Updated Definition";
-        editFlashcardViewModel.updateFlashcard(testFlashcard1.getCardId(), newTerm, newDefinition);
-        Flashcard updatedFlashcard = flashcardDao.findById(testFlashcard1.getCardId());
+        editFlashcardViewModel.updateFlashcard(testFlashcard.getCardId(), newTerm, newDefinition);
+        Flashcard updatedFlashcard = flashcardDao.findById(testFlashcard.getCardId());
         assertEquals(newTerm, updatedFlashcard.getTerm());
         assertEquals(newDefinition, updatedFlashcard.getDefinition());
     }
 
     @Test
     public void testIsLastFlashcard() {
-        boolean isLast = editFlashcardViewModel.isLastFlashcard(testFlashcardSet1.getSetId());
+        boolean isLast = editFlashcardViewModel.isLastFlashcard(testFlashcardSet.getSetId());
         assertTrue(isLast);
     }
 
     @Test
     public void testDeleteFlashcard() {
-        editFlashcardViewModel.deleteFlashcard(testFlashcard1.getCardId(), testFlashcardSet1.getSetId());
-        Flashcard deletedFlashcard = flashcardDao.findById(testFlashcard1.getCardId());
+        editFlashcardViewModel.deleteFlashcard(testFlashcard.getCardId(), testFlashcardSet.getSetId());
+        Flashcard deletedFlashcard = flashcardDao.findById(testFlashcard.getCardId());
         assertNull(deletedFlashcard);
     }
 }
